# C-CLASS-WORK

./: 0.c  1.c  2.c  3.c  4.c  5.c  6.c  CMakeLists.txt  array1.c  dt_size.c  head1.c  name.c  pattern_star  pattern_star.c  prime.c  structure  structure_1.c  structure_2  structure_2.c  structure_3  structure_3.c  structure_4.c  unary.c
