cmake_minimum_required(VERSION 3.26)
project(CLASS_WORK C)

set(CMAKE_C_STANDARD 23)

add_executable(CLASS_WORK
        #array1.c
        head1.c
        # pattern_star.c
       # mem_address.c
       # dt_size.c
       # unary.c
       # value.c
       # factorial.c
       # prime.c
       # pattern_pass.c
       # name.c

)
